# drexpa

./: .gitattributes  .gitignore  Dockerfile  DrugTargetInteractionDB.db  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  STREAMLIT_APP_README.md  STREAMLIT_QUICKSTART.md  TODO.md  config_readme.md  pyproject.toml  requirements.txt
.github/workflows/: streamlit-check.yml
.streamlit/: config.toml
data/input/: CFP_nodes.csv
data/input/jaaks/: drug_names.txt  jaaks_original_screen_all_tissues_fitted_data.csv  tissue_cline.csv
data/input/oncologics/: conf_oncologics.json  conf_oncologics_nosynergy.json  drug_list.txt
data/input/oneil/: oneils_bliss.csv  oneils_dataset.xls  oneils_drug_names.txt  tissue_cline.csv
data/input/vis/: drug_names.txt  synergy_data.csv  tissue_cline.csv
data/test_data/: drug_names.txt
drexpa/: __init__.py  __main__.py  cli.py  config.py  main.py  step_registry.py  streamlit_app.py
drexpa/app_utils/: file_handlers.py  pipeline_runner.py  visualizations.py
drexpa/features/: chembl_ids.py  combinations.py  doses.py  drug.py  helpers.py  node_targets.py  panel.py  perturbations.py  profiles.py  synergies.py  target_checker.py  targets.py
drexpa/resources/: __init__.py  database.py
examples/: README.md  config_template.json  run_drexpa_bashi.py  run_drexpa_vis.py  sample_drug_names.txt  sample_node_dict.csv
pre-processing notebooks/: dataprocessing_jaaks.ipynb  dataprocessing_oncologics.ipynb  dataprocessing_oneil.ipynb  dataprocessing_vis.ipynb
tests/: test_basic.py  test_cli.py  test_config.py  test_pipeline_modes.py  test_preflight.py  test_resources.py  test_step_registry.py  test_targets_merge.py
